# BotAdapt

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  PHASE3_TODO.md  README.md  botadapt.toml  tinybot.toml
.github/workflows/: build.yml
botadapt-cli/: Cargo.toml
botadapt-cli/src/: main.rs
botadapt-core/: Cargo.toml
botadapt-core/src/: binding.rs  error.rs  lib.rs
botadapt-core/src/adapter/: mod.rs  registry.rs
botadapt-core/src/config/: mod.rs  parser.rs
botadapt-core/src/event/: mod.rs
botadapt-core/src/plugin/: manager.rs  mod.rs  native.rs
botadapt-core/src/plugin/wasm/: host_fns.rs  instance.rs  mod.rs
botadapt-plugin-sdk/: Cargo.toml
botadapt-plugin-sdk/src/: host_calls.rs  lib.rs  prelude.rs  types.rs
botadapt-plugin-sdk/src/types/: action.rs  event.rs  target.rs
botadapt-qq/: Cargo.toml  README.md
botadapt-qq/examples/: qq_test.rs
botadapt-qq/src/: adapter.rs  config.rs  error.rs  lib.rs
botadapt-qq/src/api/: mod.rs  types.rs
botadapt-qq/src/event/: converter.rs
botadapt-qq/src/ws/: client.rs  heartbeat.rs
config/: default.toml
plugins/dice/: Cargo.toml
plugins/dice/src/: lib.rs
plugins/hello/: Cargo.toml
plugins/hello/src/: lib.rs
plugins/hello/wit/: world.wit
src/: args.rs  builtin.rs  core.rs  main.rs  platform.rs
src/core/: binding.rs  bot.rs  builtin.rs  config.rs  events.rs  hello.rs  plugin.rs  session.rs  wasm.rs
src/core/config/: parser.rs
src/platform/: debug.rs  stdio.rs
src/platform/qq/: adapter.rs  config.rs  mod.rs
src/platform/qq/event/: converter.rs
src/platform/qq/ws/: client.rs
tinybot/: Cargo.toml
tinybot/src/: args.rs  core.rs  main.rs  platform.rs
tinybot/src/core/: adapter.rs  config.rs
tinybot/src/platform/qq/ws/: heartbeat.rs
