[workspace]
resolver = "2"
members = [
    "botadapt-core",
    "botadapt-qq",
    "botadapt-cli",
    "botadapt-plugin-sdk",
    "plugins/dice",
]
default-members = [
    "botadapt-core",
    "botadapt-qq",
    "botadapt-cli",
]

[workspace.dependencies]
anyhow = "1.0"
# async
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
uuid = { version = "1", features = ["v4", "serde"] }
serde-inline-default= {version="1.0"}

# network
reqwest = { version = "0.13", features = ["json"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "handshake", "rustls-tls-native-roots"] }

# observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"

# wasm
wasmtime = { version = "44", default-features = false, features = ["cranelift", "runtime"] }
wasmtime-wasi = "44"
