[package]
name = "botadapt-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
serde-inline-default = { workspace = true }
anyhow = {workspace = true}
