[package]
name = "botadapt-qq"
version = "0.1.0"
edition = "2021"

[dependencies]
botadapt-core = { path = "../botadapt-core" }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
thiserror = "2"

[dev-dependencies]
tracing-subscriber = "0.3"
