[package]
name = "botadapt-qq"
version = "0.1.0"
edition = "2021"

[dependencies]
botadapt-core = { path = "../botadapt-core" }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
