[package]
name = "tinybot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait = { workspace = true }
clap.workspace = true
serde = {workspace = true,features = ["derive"]}
serde-inline-default = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
temp-env = "0.3"
